feat(ui): Add basic javafx implementation with a single view with an interactive button.

--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,7 @@
         <version>0.0.8</version>
         <configuration>
           <!-- https://github.com/openjfx/javafx-maven-plugin -->
-          <!-- TODO: Add the main class of the application -->
-          <mainClass></mainClass>
+          <mainClass>edu.ntnu.idi.idatt.CardGame</mainClass>
         </configuration>
       </plugin>
     </plugins>
